<resources>
    <string name="app_name">Le Carrousel</string>

    <!--Only For Android-->
    <string name="permission_camera">Allow Le Carrousel to use your phone\'s camera? \nTo enable this, click Ok below and activate Storage under the Permissions menu.</string>
    <!--Login-->
    <string name="english">ENGLISH</string>
    <string name="arabic">العربية</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="skip">SKIP</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">CREATE A NEW ACCOUNT</string>
    <string name="have_an_account">HAVE AN ACCOUNT? SIGN IN HERE!</string>
    <string name="forgot_password">Forgot your password? Click here to recover.</string>

    <!--register-->
    <string name="register_account">REGISTER YOUR ACCOUNT</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="register">REGISTER</string>
    <string name="name">NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="country">COUNTRY</string>
    <string name="verification">Verification</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="proceed">PROCEED</string>
    <string name="by_signing_up">By signing up you agree to our </string>
    <string name="terms_condition_policy">Terms and Condition Policy</string>

    <!--recover pass-->
    <string name="or">Or</string>
    <string name="recover_password">RECOVER PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_email_mobile">Enter your email address or mobile number in order for us to send you a password recovery link. Please use the same details you used to create an account.</string>
    <string name="email">email</string>
    <!--reset password-->


    <!--Side Menu-->
    <string name="Welcome">Welcome</string>
    <string name="occassion">OCCASIONS</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="wishlist">WISHLIST</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="my_cart">MY CART</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="logout">LOGOUT</string>

    <!--Logout Dialog-->
    <string name="cancel">Cancel</string>
    <string name="skip_common">skip</string>
    <string name="logout1">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>

    <!--Exit Dialog-->
    <string name="exit_txt">Do you really want to exit?</string>
    <string name="exit">Exit</string>
    <string name="please_wait">Please wait</string>


    <!--product list-->
    <string name="chocolate">CHOCOLATE</string>
    <string name="flowers">FLOWERS</string>
    <string name="combo">COMBO</string>
    <string name="guest">Guest</string>
    <string name="qar">QAR</string>

    <!--Product Detail-->
    <string name="quantity">QUANTITY</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total">TOTAL</string>
    <string name="paynow">Pay now</string>
    <string name="need_to_login">You need to login first</string>
    <string name="login_pd">Login</string>


    <!--add card number-->
    <string name="card_details">CARD DETAILS</string>
    <string name="add_new_card">ADD A NEW CARD</string>
    <string name="add_new_credit_card">CREDIT CARD</string>
    <string name="add_new_debit_card">DEBIT CARD</string>
    <string name="card_num">CARD NUMBER</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="expiry_date">EXPIRY DATE</string>

    <!--add new address-->
    <string name="add_address">ADD A NEW ADDRESS</string>
    <string name="address_details">ADDRESS DETAILS</string>
    <string name="contact_name">CONTACT NAME</string>
    <string name="street_address">STREET ADDRESS</string>
    <!--<string name="city">CITY</string>-->
    <string name="building">BUILDING NO.</string>
    <string name="street">STREET NO.</string>
    <string name="zone">ZONE</string>
    <string name="mobile">MOBILE</string>
    <string name="save">SAVE</string>
    <string name="addr_format">%1$s,%2$s,%3$s</string>

    <!--change password-->
    <string name="change_pass">CHANGE PASSWORD</string>
    <string name="old_pass">OLD PASSWORD</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="confirm_new_pass">CONFIRM NEW PASSWORD</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="security_code">SECURITY CODE</string>
    <string name="resend_code">(<u>RE-SEND CODE</u>)</string>


    <!--my profle-->
    <string name="delivery_addresses">DELIVERY ADDRESSES</string>
    <string name="add_new">ADD NEW</string>
    <string name="saved_cards">SAVED CARDS</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="delete_msg">Are you sure you want to remove this record?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="card">**** **** **** %1$s</string>
    <!--<string name="terms"><u>%1$s</u></string>-->
    <string name="delete">DELETE</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="select_from_photo">Select from gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="update">UPDATE</string>
    <string name="select_source">Select source</string>
    <string name="share">Share</string>

    <!--My Oder List-->
    <string name="processing">Processing</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Cancelled</string>
    <string name="returned">Returned</string>
    <string name="out_for_delivery">Out for delivery</string>
    <string name="fail_to_deliver">Failed to deliver</string>
    <!--<string name="pending">PENDING</string>-->
    <!--<string name="dispatch">DISPATCHED</string>-->
    <!--<string name="rejected">REJECTED</string>-->

    <!--Order Confirmation-->
    <string name="order_confirmation">ORDER CONFIRMATION</string>
    <string name="thank_you">Thank you for placing your order with us. Your order reference number is</string>
    <string name="you_can_check">You can always check back the status of your orders on My Orders Section.</string>
    <string name="back_to_dashboard">BACK TO DASHBOARD</string>
    <string name="cvv">CVV</string>
    <string name="save_card_for_later_use">SAVE CARD FOR LATER USE</string>
    <string name="confirm">CONFIRM</string>
    <string name="back">BACK</string>
    <string name="terms_and_condition">Terms and Conditions apply</string>
    <string name="only_terms">Terms and Conditions</string>
    <string name="apply">apply</string>
    <string name="my_order_link">My Orders</string>

    <!--order review-->
    <string name="order_date">ORDER DATE</string>
    <string name="discount">DISCOUNT</string>
    <string name="order_total">ORDER TOTAL</string>
    <string name="coupon_code">COUPON CODE</string>
    <string name="enter_your_code">Enter your code here</string>
    <string name="piece">PIECE</string>
    <string name="card_message">CARD MESSAGE</string>
    <string name="greet_msg_text">GREETING MESSAGES</string>
    <string name="std_card_message">STANDARD GREETING CARD</string>
    <string name="tap_and_select_msg">Tap and select your message from our template</string>
    <string name="custom_card_message">CUSTOMIZE GREETING CARD MESSAGE</string>
    <string name="type_card_message">Type your message here, if you skip, we’ll not include the card on delivery.</string>
    <string name="deliver_to_other_address">DELIVER TO OTHER ADDRESS</string>
    <string name="cod">CASH ON DELIVERY</string>
    <string name="deliver_to_my_address">DELIVER TO MY ADDRESS</string>
    <string name="payment_with_card">PAYMENT WITH CARD</string>
    <string name="review_order">1.REVIEW ORDER</string>
    <string name="delivery">2.DELIVERY</string>
    <string name="payment">3.PAYMENT</string>
    <string name="my_wishlist">MY WISHLIST</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="Month">Month</string>
    <string name="year">Year</string>
    <string name="remove_record">Are you sure you want to remove this record?</string>
    <string name="expected_delivery_date">EXPECTED DELIVERY DATE AND TIME</string>
    <!--<string name="prefered_time">PREFERED TIMING</string>-->
    <string name="date_format_text">dd/mm/yyyy</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="date_format_blank">00-00-0000</string>
    <string name="time">Time</string>
    <string name="get_otp">Get OTP</string>

    <!--order details-->
    <string name="order_detail">ORDER DETAILS</string>
    <string name="order_detail_header_text">%1$s %2$s %3$s</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="discount_text">- %1$s</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="return_order">RETURN ORDER</string>
    <string name="confirm_cancel_text">Are you sure you want to cancel this order?</string>
    <string name="confirm_return_text">Are you sure you want to return this order?</string>


    <string name="all_product">All Products</string>
    <string name="dash">---</string>
    <string name="hours">Hours</string>
    <string name="delivery_format_text">(%1$s - ETA: %2$s)</string>

    <!--change store-->
    <string name="select_country">SELECT COUNTRY FOR SHIPPING</string>
    <string name="storeid_not_match">Product\'s store doesn\'t match with your existing store.</string>
    <string name="chnage_store_id">Are you sure you want to change store? Anything in your cart will be cleared. </string>

    <!--Notification-->
    <string name="order_status_changed">Order status changed</string>
    <string name="processing_notification">Processing</string>
    <string name="out_for_delivery_notification">Out for delivery</string>
    <string name="delivered_notification">Delivered</string>
    <string name="cancelled_notification">Cancelled</string>
    <string name="returned_notification">Returned</string>
    <string name="fail_to_deliver_notification">Failed to deliver</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_msg">Are you sure you want to remove all records?</string>


</resources>
