<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/layHeader"
            layout="@layout/header" />

        <LinearLayout
            android:id="@+id/layUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layHeader"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRecoverPassLabel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/recover_password"
                android:textColor="@color/brown"
                android:textSize="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/ivMail"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmailAddLabel"
                        style="@style/stl_txt"
                        android:text="@string/email_address" />


                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/stl_editTxt"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/hint_enter_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivMail"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_mail" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    style="@style/stl_view"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/gray5"
                    android:paddingBottom="1dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="1dp"
                    android:text="@string/or"
                    android:textColor="@color/gray1"
                    android:textSize="14dp" />
            </FrameLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/ivMobileNo"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvMobileNo"
                        style="@style/stl_txt"
                        android:text="@string/mobile_number" />


                    <EditText
                        android:id="@+id/etMobileNo"
                        style="@style/stl_editTxt"

                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/hint_enter_mobile"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="15" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivMobileNo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_phone" />
            </RelativeLayout>

            <View style="@style/stl_view" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/enter_email_mobile"
                android:textColor="@color/gray1"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvRecoverPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/layCancel"
                    android:background="@color/yellow"
                    android:gravity="center"
                    android:text="@string/recover_password"
                    android:textColor="@color/brown"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:id="@+id/layCancel"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/yellow3"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/rounded_background_darkbrown"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@color/gray5"
                        android:textSize="10dp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>