<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layUserInfo"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_login_back" />

                <LinearLayout
                    android:id="@+id/layLangugeButtons"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvEnglish"
                        style="@style/stl_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/rounded_background_yellow"
                        android:gravity="center"
                        android:text="@string/english" />

                    <TextView
                        android:id="@+id/tvArebic"
                        style="@style/stl_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/rounded_background_yellow"
                        android:gravity="center"
                        android:text="@string/arabic" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/layLangugeButtons">

                    <ImageView
                        android:id="@+id/ivLoginLogo"
                        android:layout_width="178dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_logo" />
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/ivMail"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmailAddLabel"
                        style="@style/stl_txt"
                        android:text="@string/email_address" />


                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/stl_editTxt"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/hint_enter_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivMail"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_mail" />
            </RelativeLayout>

            <View style="@style/stl_view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/ivPass"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPasswordLabel"
                        style="@style/stl_txt"
                        android:text="@string/password" />


                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/stl_editTxt"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/hint_enter_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/ivPass"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_pass" />
            </RelativeLayout>

            <View style="@style/stl_view" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/laySkip"
                    android:background="@drawable/selector_bg"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/brown"
                    android:textSize="14dp" />


                <RelativeLayout
                    android:id="@+id/laySkip"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="@color/yellow3"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSkip"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/rounded_background_darkbrown"
                        android:gravity="center"
                        android:text="@string/skip"
                        android:textColor="@color/gray5"
                        android:textSize="12dp" />
                </RelativeLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layCreateAcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvCreateNewPassLabel"
                    style="@style/stl_txt"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/create_new_account" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="14dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_create_account" />
            </RelativeLayout>

            <View style="@style/stl_view" />

            <TextView
                android:id="@+id/tvForgotPass"
                style="@style/stl_txt"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray1" />
        </LinearLayout>


    </RelativeLayout>
</layout>