<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/layMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReviewOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow2"
                android:gravity="center"
                android:text="@string/review_order"
                android:textColor="@color/brown"
                android:textSize="10dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="12dp"
                android:background="@color/brown" />

            <TextView
                android:id="@+id/tvDelivery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/delivery"
                android:textColor="@color/brown"
                android:textSize="10dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="12dp"
                android:background="@color/brown" />

            <TextView
                android:id="@+id/tvPayment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/payment"
                android:textColor="@color/brown"
                android:textSize="10dp" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/vflipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include
                android:id="@+id/layReviewOrderDetail"
                layout="@layout/frg_review_order_detail" />

            <include
                android:id="@+id/layOrderAddress"
                layout="@layout/frg_order_address" />

            <include
                android:id="@+id/layOrderPayment"
                layout="@layout/frg_order_card" />
        </ViewFlipper>

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/data_not_found"/>
    </LinearLayout>
</layout>